# rust-snappy

./: Cargo.toml  README.md
benches/: bench.rs
snappy-sys/: Cargo.toml  build.rs
snappy-sys/src/: lib.rs
src/: lib.rs
