[package]
name = "parity-snappy-sys"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
license = "MIT/Apache-2.0/BSD"
description = "Native bindings to libsnappy"
readme = "README.md"
keywords = ["ffi", "snappy"]

build = "build.rs"
links = "snappy"

[features]
default = []

[dependencies]
libc = "0.2"

[build-dependencies]
cmake = "0.1"
